# AI-Steam-Lab

./: .gitignore  README.md  SECURITY.md  docker-compose.yml  nginx.conf  render.yaml  start_neurolab.bat
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  config.py  cv_tracker.py  dependencies.py  pyproject.toml  reconstruct.py  recover.py  refactor.py  requirements.txt  test_api_endpoints.py  test_physics_engine.py  tutor.py
backend/app/: cache.py  logger.py  main.py  worker.py
backend/app/ai_agent/: tutor_service.py
backend/app/core_backend/: knowledge_graph.py  report_generator.py
backend/app/core_backend/core/: config.py  dependencies.py
backend/app/core_backend/database/: local_stem_db.json  pgvector_db.py  supabase_db.py
backend/app/core_backend/models/: schema.py
backend/app/core_backend/routes/: auth.py  cv_tracker.py  experiments.py  gamification.py  tutor.py
backend/app/machine_learning/: cv_service.py  physics_engine.py
backend/tests/: test_api_endpoints.py  test_physics_engine.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  split.py  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/lib/: chatStore.ts  notificationStore.ts  supabase.ts
frontend/src/pages/: AITutorPage.tsx  AboutPage.tsx  AuthPage.tsx  BlogPage.tsx  CareersPage.tsx  ContactPage.tsx  CookiesPage.tsx  Dashboard.tsx  DocsPage.tsx  FeaturesPage.tsx  IntroLoading.tsx  LandingPage.tsx  PricingPage.tsx  PrivacyPage.tsx  (+4 more)
(+30 files in other folders)
