"[project]\nname = \"ai-stem-lab-backend\"\nversion = \"1.0.0\"\ndescription = \"FastAPI Backend for AI STEM Lab Assistant\"\nrequires-python = \">=3.11\"\n\n[tool.ruff]\nline-length = 100\ntarget-version = \"py311\"\n\n[tool.ruff.lint]\nselect = [\n    \"E\",  # pycodestyle errors\n    \"W\",  # pycodestyle warnings\n    \"F\",  # pyflakes\n    \"I\",  # isort\n    \"C\",  # flake8-comprehensions\n    \"B\",  # flake8-bugbear\n]\nignore = [\n    \"E501\",  # line too long, handled by formatter\n    \"B008\",  # do not perform function calls in argument defaults (FastAPI Depends)\n]\n\n[tool.ruff.format]\nquote-style = \"double\"\nindent-style = \"space\"\nskip-magic-trailing-comma = false\nline-ending = \"auto\"\n"